Changes before migration

--- a/operations-extender/print-preview.component.html
+++ b/operations-extender/print-preview.component.html
@@ -1,2 +1,1 @@
-<h1 *ngIf="dataItem">{{dataItem.Title}}</h1>
-<h1 *ngIf="!dataItem">Loading data ..</h1>
+<h1 *ngIf="context">{{context.dataItem.Title}}</h1>
