--- a/toolbar-extender/toolbar.css
+++ b/toolbar-extender/toolbar.css
@@ -1,3 +1,4 @@
-.k-editor-toolbar .k-i-Words-count::before {
+.k-editor-toolbar .k-i-words-count::before {
+    /* Kendo UI Icons: https://docs.telerik.com/kendo-ui/styles-and-layout/icons-web */
     content: "\e696";
 }
