--- a/commands-extender/print-preview.component.html
+++ b/commands-extender/print-preview.component.html
@@ -1,6 +1,4 @@
-
-<br />
-<br />
-
-<h1 *ngIf="dataItem">{{dataItem.Title}}</h1>
-<h1 *ngIf="!dataItem">Loading..</h1>
+<div style="position: fixed;top: 50%;left: 50%;">
+    <h1 *ngIf="dataItem">{{dataItem.Title}}</h1>
+    <h1 *ngIf="!dataItem">Loading..</h1>
+</div>
