Character counter demo from Progress NEXT2018

--- a/custom-fields/custom-field-write.component.html
+++ b/custom-fields/custom-field-write.component.html
@@ -1,1 +1,2 @@
-<input class="custom-title-input" [(ngModel)]="value" />
+<input class="custom-title-input" [(ngModel)]="value" (keyup)="onKeyUp()"/>
+<div class="custom-count">{{charactersLeft}}</div>
