--- a/insert-symbol/insert-symbol.provider.css
+++ b/insert-symbol/insert-symbol.provider.css
@@ -29,3 +29,14 @@
     cursor: pointer;
     font-size: 1.1em;
 }
+
+.k-ct-popup.symbol-popup {
+    width: 350px !important;
+    padding: 5px 10px 10px 10px !important;
+}
+
+.symbol-title {
+    font-size: 10px;
+    color: #999999;
+    margin: 10px 5px;
+}
