--- a/custom-fields/custom-field-write.component.html
+++ b/custom-fields/custom-field-write.component.html
@@ -6,6 +6,6 @@
     #inputField
     ngDefaultControl
     [(ngModel)]="value"
-    (onBlur)="onFocusOut()"
+    (onBlur)="onBlur()"
     (onFocus)="onFocus()">
 </sf-input>
