New sample for Custom fields with validators (#72)
* new sample for fields

* add comments and types

* add recommended characters

* add comment

* Add test

* Update package.json

* Fix test

--- a/custom-fields/custom-field-write.component.html
+++ b/custom-fields/custom-field-write.component.html
@@ -1,1 +1,11 @@
-<input class="custom-title-input" [(ngModel)]="value" />
+<sf-input
+    [name]="settings.key"
+    [look]="settings.look"
+    [placeholder]="settings.placeholder"
+    [recommendedCharacters]="settings.recommendedCharacters"
+    #inputField
+    ngDefaultControl
+    [(ngModel)]="value"
+    (onBlur)="onBlur()"
+    (onFocus)="onFocus()">
+</sf-input>
