--- a/custom-fields/address-custom-field/address-custom-field.component.html
+++ b/custom-fields/address-custom-field/address-custom-field.component.html
@@ -3,7 +3,7 @@
     (contentFocusOut)="onFocusOut()">
     <span class="sf-input sf-popup">
         <input type="text"
-             #editableElement
+             #streetAddress
              class="sf-input__field"
              autocomplete="off"
              (keydown.enter)="onEnterKey($event)"
