--- a/src/editor-extender/insert-symbol/insert-symbol.provider.css
+++ b/src/editor-extender/insert-symbol/insert-symbol.provider.css
@@ -13,7 +13,7 @@
     content: "\e006";
 }
 
-.k-tool-icon.k-i-insert-symbol::before {
+.k-icon.k-i-insert-symbol::before {
     padding-right: 0;
 }
 
@@ -37,6 +37,7 @@
 }
 
 .k-ct-popup.symbol-popup {
+    display: block;
     width: 350px !important;
     padding: 5px 10px 10px 10px !important;
 }
