--- a/src/widget-editor/custom-editor/custom-widget-editor.component.html
+++ b/src/widget-editor/custom-editor/custom-widget-editor.component.html
@@ -1,1 +1,6 @@
-<h1>Hello World</h1>
+<div class="sf-form -medium -sf-centered-box -sf-pb-zero -sf-pt-7xl">
+    <h1>{{heading}}</h1>
+    <textarea [(ngModel)]='propertiesValue' ngDefaultControl rows="30" cols="120">
+    </textarea>
+
+</div>
