--- a/src/text-analysis/toolbar.css
+++ b/src/text-analysis/toolbar.css
@@ -1,4 +1,4 @@
-.k-editor-toolbar .k-i-Sitefinity-videos::before {
+.k-editor-toolbar .k-i-text-analysis::before {
     /* Kendo UI Icons: https://docs.telerik.com/kendo-ui/styles-and-layout/icons-web */
-    content: "\e659";
+    content: "\e13d";
 }
