--- a/src/custom-fields/custom-field-write.component.html
+++ b/src/custom-fields/custom-field-write.component.html
@@ -1,11 +1,4 @@
+<h1> asdasd </h1>
 <sf-input
-    [name]="settings.key"
-    [look]="settings.look"
-    [placeholder]="settings.placeholder"
-    [recommendedCharacters]="settings.recommendedCharacters"
-    #inputField
-    ngDefaultControl
-    [(ngModel)]="value"
-    (onBlur)="onBlur()"
-    (onFocus)="onFocus()">
-</sf-input>
+[(ngModel)]="value"
+></sf-input>
