--- a/src/commands-extender/print-preview.component.html
+++ b/src/commands-extender/print-preview.component.html
@@ -2,3 +2,5 @@
     <h1 *ngIf="dataItem" [textContent]="dataItem.Title"></h1>
     <h1 *ngIf="!dataItem">Loading..</h1>
 </div>
+
+<sf-input [(ngModel)]="brat"></sf-input>
