--- a/src/custom-fields/array-of-guids/array-of-guids-write.component.html
+++ b/src/custom-fields/array-of-guids/array-of-guids-write.component.html
@@ -1,7 +1,2 @@
-<sf-input
-    [name]="settings.key"
-    [look]="settings.look"
-    [placeholder]="settings.placeholder"
-    ngDefaultControl
-    [(ngModel)]="value">
+<sf-input>
 </sf-input>
